--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT = 8000
 MONGODB_URI = mongodb+srv://harshitchourasiya0808:Harshit@cluster0.zd1qscf.mongodb.net
 CORS_ORIGIN = *
+ACCESS_TOKEN_SECRET = OTUCkcyqgZAaM0ogRHVIg9GG_Gzh9zMocy03UtNdDNtoJ0X0-5n3DmVkx08MCFRSLD9cv1kBfLwK7fd0
+ACCESS_TOKEN_EXPIRY = 1d
+REFRESH_TOKEN_SECRET = CJ0X0-5aMdDNtowD9cv0oVIg9GG_OGzh9zMocy03UtN1kBfLRn3Dmkx08MCFRSLHVTUkcqgZAK7fd0
+REFRESH_TOKEN_EXPIRY = 10d
