Cloudinary and multer setup

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ ACCESS_TOKEN_SECRET = OTUCkcyqgZAaM0ogRHVIg9GG_Gzh9zMocy03UtNdDNtoJ0X0-5n3DmVkx0
 ACCESS_TOKEN_EXPIRY = 1d
 REFRESH_TOKEN_SECRET = CJ0X0-5aMdDNtowD9cv0oVIg9GG_OGzh9zMocy03UtN1kBfLRn3Dmkx08MCFRSLHVTUkcqgZAK7fd0
 REFRESH_TOKEN_EXPIRY = 10d
+
+CLOUDINARY_CLOUD_NAME = harshit882002
+CLOUDINARY_API_KEY = 246782183259898
+CLOUDINARY_API_SECRET = 631uysAOdm7KKb_CYidSJ4BE7Ik
